# proj-pb14-course-project-group-1

./: .env.sample  .flake8  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose-ci.yml  docker-compose.yml  job1.yml  new_user.drawio  project.toml  pyproject.toml  register_user.py  requirements.txt  user.py
.github/workflows/: github-actions.yml
app/: app.py  config.py  main.py
app/constants/: __init__.py  const.py  constants.py  user.py
app/db/: __init__.py  base.py
app/gpt/: __init__.py  api.py  gpt.py
app/logs/: __init__.py  log.py
app/migrations/: env.py
app/migrations/versions/: 0000_added_tables.py  0000_added_tables_.py
app/models/: __init__.py  base.py  feedback.py  goals.py  hobby.py  models.py  proposal.py  user.py
app/schemas/: __init__.py  feedback.py  goals.py  hobby.py  proposal.py  user.py
app/telegram/: __init__.py  bot.py  filters.py  forms.py
app/telegram/routers/: __init__.py  delete_profile.py  edit_profile.py  matching.py  show_profile.py  start.py  utils.py
app/tests/: test_bot.py  test_init.py
docker/: local.Dockerfile
docs/: how_install_docker.md
ops/: fmt.sh  lint.sh
