[tool.poetry]
name = "proj-pb14-course-project-group-1"
version = "0.1.0"
description = ""
authors = ["AlinaProkhorenko <prokhorenko.alina@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
'''
target-version = ['py310']